services and service single pages

--- a/src/scss/pages/services/_page-services.scss
+++ b/src/scss/pages/services/_page-services.scss
@@ -1,4 +1,4 @@
-.page-services-list {
+.page-services {
   background-image: url('../images/undraw_businesswoman_pc12.svg');
   background-repeat: no-repeat;
   background-size: 115%;
