services, team, testimonials views

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,12 +62,8 @@
 
 // Pages
 @import 'pages/home';
-@import 'pages/team/team-list';
-@import 'pages/team/team-summary';
-@import 'pages/team/page-team-list';
-@import 'pages/testimonials/testimonials-list';
-@import 'pages/testimonials/testimonials-summary';
-@import 'pages/testimonials/page-testimonials-list';
+@import 'pages/team/page-teams';
+@import 'pages/testimonials/page-testimonials';
 @import 'pages/services/page-services';
 @import 'pages/services/page-service';
 @import 'pages/services/service-single';
