--- a/src/scss/pages/team/_page-teams.scss
+++ b/src/scss/pages/team/_page-teams.scss
@@ -1,4 +1,4 @@
-.page-team-list {
+.page-teams {
   background-image: url('../images/undraw_hang_out_h9ud.svg');
   background-repeat: no-repeat;
   background-size: 115%;
