--- a/src/scss/pages/testimonials/_page-testimonials.scss
+++ b/src/scss/pages/testimonials/_page-testimonials.scss
@@ -1,4 +1,4 @@
-.page-testimonials-list {
+.page-testimonials {
   // background-image: url("../images/undraw_hang_out_h9ud.svg");
   background-repeat: no-repeat;
   background-size: 115%;
