--- a/src/scss/pages/testimonials/_page-testimonials.scss
+++ b/src/scss/pages/testimonials/_page-testimonials.scss
@@ -1,5 +1,5 @@
 .page-testimonials {
-  // background-image: url("../images/undraw_hang_out_h9ud.svg");
+  // background-image: url('../images/undraw_hang_out_h9ud.svg');
   background-repeat: no-repeat;
   background-size: 115%;
   background-position: 49px -40px;
