upgrading pages and content

--- a/src/scss/components/_sub-footer.scss
+++ b/src/scss/components/_sub-footer.scss
@@ -18,6 +18,9 @@
   .copyright {
     margin-top: 10px;
     font-size: 14px;
+    span {
+      margin-right: 4px;
+    }
     a {
       font-weight: bold;
       color: inherit;
