add basic page templating

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 // Colors
 $primary: #8036ca;
-$secondary: #f88379;
+$secondary: #ffe55f;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #f6f7ff;
