--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -4,11 +4,17 @@
   align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
+  height: 35vw;
+  width: 100%;
+  position:relative;
+  margin-top: -2.7ch;
   overflow: hidden;
   @include media-breakpoint-up(md) {
     padding-top: 140px;
     padding-bottom: 140px;
   }
+  
+
   h1 {
     color: $black;
     font-size: 42px;
